--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -24,6 +24,7 @@ body {
 main {
   position: relative;
   float: left;
+  width: 100%;
   margin-top: 5px;
   background-image: url(../img/body-bg.jpg);
   box-shadow: 0px 0px 50px;
