--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -43,9 +43,14 @@ header {
   width: 90px;
   height: 90px;
   margin-left: 10px;
-  background-image: url(../img/logo.gif);
+  background-image: url(../img/logo.png);
   background-size: cover;
-  box-shadow: 0 0 10px;
+  border-radius:45px;
+  box-shadow: 0px 0px 30px #fff;
+  opacity: 0.6;
+}
+#logo:hover {
+  opacity: 1;
 }
 
 #slogan {
